feat: add favicon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link id="favicon" rel="icon" href="favicons/shop.png" type="image/png" sizes="16*16">
     <link rel="stylesheet" href="style.css">
 
     <script src="https://kit.fontawesome.com/8750d92881.js" crossorigin="anonymous"></script>
@@ -36,7 +37,7 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
-            
+
             <i class="fas fa-shopping-cart" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
                 aria-controls="offcanvasScrolling" style="width: 30px; color: black;"></i>
 
