--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
                 </ul>
             </div>
 
-            <i class="fas fa-shopping-cart" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
-                aria-controls="offcanvasScrolling" style="width: 30px; color: black;"></i>
+            <div style="position: relative;" >
+                <span class="badge">0</span>
+                <i class="fas fa-shopping-cart" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
+                    aria-controls="offcanvasScrolling" style="width: 30px; color: black;"></i>
+            </div>
 
         </nav>
     </header>
